Fix fallback page elements not properly aligned

--- a/src/app/fallback/fallback.component.scss
+++ b/src/app/fallback/fallback.component.scss
@@ -1,7 +1,7 @@
 @import "~ng-devui/styles-var/devui-var.scss";
 
 .main-container {
-    // margin: auto;
+    margin-top: 100px;
     display: grid;
     height: 100%;
     align-items: center;
